# rustyfetch

./: .gitignore  Cargo.toml  PKGBUILD  README.md
src/: main.rs
src/ascii-arts/: ubuntu
