[package]
name = "rustyfetch"
version = "0.1.7"
edition = "2021"
description = "Fetch your system information via Rust!"
license = "AGPL-3.0"
authors = ["Jonas Riedel"]
homepage = "https://github.com/jonasrdl/rustfetch"
repository = "https://github.com/jonasrdl/rustfetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.24.7"
colored = "2.0.0"
os-release = "0.1.0"